mexi quase nada (remoção de modulos)

--- a/Processamento_imagens/aula04/classificador.ipynb
+++ b/Processamento_imagens/aula04/classificador.ipynb
@@ -434,43 +434,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "def preparar_dados(labels):\n",
-    "    # Converter rótulos de strings para valores numéricos\n",
-    "    encoder = LabelEncoder()\n",
-    "    encoder.fit(labels)\n",
-    "    labels_codificados = encoder.transform(labels)\n",
-    "\n",
-    "    # Converter rótulos numéricos para vetores one-hot\n",
-    "    labels_one_hot = to_categorical(labels_codificados)\n",
-    "\n",
-    "    return labels_one_hot"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5516\n"
-     ]
-    }
-   ],
-   "source": [
-    "label = preparar_dados(train_label)\n",
-    "print(len(label))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
    "outputs": [],
@@ -611,28 +574,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
-    "def train_model(model, train_data, train_label, test_data, test_label, epochs=10, batch_size=32):\n",
+    "def train_model(model, train_data, train_label, epochs=10, batch_size=32):\n",
     "    model.fit(train_data, train_label, epochs=epochs, batch_size=batch_size)\n",
     "    return model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "    \n",
-    "# Exemplo de uso\n",
-    "model = create_model(input_dim, output_dim, dense_layers)\n",
-    "model = train_model(model, train_data, train_label, test_data, test_label)"
    ]
   }
  ],
