--- a/Extencao/Post_01/gemini.ipynb
+++ b/Extencao/Post_01/gemini.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
     "\n",
     "Neste documento, você saberá como acessar e utilizar o **Google Gemini** para esse fim.\n",
     "\n",
-    "![Exemplo de imagem](Extencao\\Post_01\\Imagens\\image.png)\n"
+    "<img src=\"Extencao\\Post_01\\Imagens\\image.png\" alt=\"Texto alternativo\" width=\"500\"/>"
    ]
   },
   {
@@ -66,6 +66,11 @@
    "source": [
     "## 1 - Debate comparativos sobre os modelos"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
