--- a/Extencao/Post_01/gemini.ipynb
+++ b/Extencao/Post_01/gemini.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,11 +70,6 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Nesse caso primeiramente devemos realizar um debate sobre as capacidades do Google Gemini em relação ao ChatGPT.\n",
     "\n",
@@ -84,8 +79,43 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 2 - Configurações Iniciais"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pre requisitos\n",
+    "\n",
+    "1 - Python 3.9 ou superior.\n",
+    "\n",
+    "2 - Uma instalação de jupyter para executar o notebook."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Obtendo uma chave para sua API\n",
+    "\n",
+    "1 - Acesse o seguinte site: [Google API Key.](https://aistudio.google.com/app/apikey?hl=pt-br)\n",
+    "\n",
+    "2 - Caso ainda não esteja logado, faça o login utilizando sua conta Google e aceite os termos de serviço.\n",
+    "\n",
+    "3 - Clique no botão para criar uma chave para um novo projeto.\n",
+    "\n",
+    "4 - Agora você pode copiar a chave.\n",
+    "\n",
+    "OBS: A chave de API é um elemento crítico para acessar os serviços fornecidos pela Google API. Essa chave funciona como uma senha que autentica suas solicitações e garante que você tenha permissão para acessar os recursos.\n",
+    "\n",
+    "Por esse motivo, deve-se prestar muita atenção para que a mesma não fique disponível publicamente."
    ]
   },
   {
@@ -99,10 +129,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "GOOGLE_API_KEY = \"AIzaSyCVzF6VoGIBSIQdpaMb4vnwdlP8oEVu0g0\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chave da API salva no arquivo .env.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# save_api_key.py\n",
+    "from dotenv import load_dotenv, set_key, find_dotenv\n",
+    "import os\n",
+    "\n",
+    "# Pergunta ao usuário a chave da API\n",
+    "api_key = \"AIzaSyCVzF6VoGIBSIQdpaMb4vnwdlP8oEVu0g0\"\n",
+    "\n",
+    "# Carrega (ou cria) o arquivo .env\n",
+    "dotenv_path = find_dotenv()\n",
+    "if not dotenv_path:\n",
+    "    with open('.env', 'w') as f:\n",
+    "        pass\n",
+    "    dotenv_path = find_dotenv()\n",
+    "\n",
+    "# Salva a chave da API no arquivo .env\n",
+    "set_key(dotenv_path, \"GOOGLE_API_KEY\", api_key)\n",
+    "\n",
+    "print(\"Chave da API salva no arquivo .env.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dotenv import load_dotenv, find_dotenv\n",
+    "import google.generativeai as genai\n",
+    "\n",
+    "_ = load_dotenv(find_dotenv())\n",
+    "# carrega a variável GOOGLE_API_KEY, que é importada automaticamente pelo módulo google.generativeai"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import google.generativeai as genai\n",
+    "\n",
+    "genai.configure(api_key=os.getenv('GOOGLE_API_KEY'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = genai.GenerativeModel('gemini-1.5-flash')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "models/gemini-1.0-pro\n",
+      "models/gemini-1.0-pro-001\n",
+      "models/gemini-1.0-pro-latest\n",
+      "models/gemini-1.0-pro-vision-latest\n",
+      "models/gemini-1.5-flash\n",
+      "models/gemini-1.5-flash-001\n",
+      "models/gemini-1.5-flash-latest\n",
+      "models/gemini-1.5-pro\n",
+      "models/gemini-1.5-pro-001\n",
+      "models/gemini-1.5-pro-latest\n",
+      "models/gemini-pro\n",
+      "models/gemini-pro-vision\n"
+     ]
+    }
+   ],
+   "source": [
+    "import google.generativeai.client as client\n",
+    "\n",
+    "# Listar modelos de forma segura\n",
+    "models = client.get_default_model_client().list_models()\n",
+    "\n",
+    "for m in models:\n",
+    "    if 'generateContent' in m.supported_generation_methods:\n",
+    "        print(m.name)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Boa noite! Como está sendo sua noite? \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "response = model.generate_content(\"Fale boa noite\")\n",
+    "print(response.text)"
+   ]
   }
  ],
  "metadata": {
