--- a/Extencao/Post_01/gemini.ipynb
+++ b/Extencao/Post_01/gemini.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,91 +122,100 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Você vai precisar gerar uma chave da API GOOGLE, salvar com o nome GOOGLE_API_KEY em um arquivo `.env` e carregar este arquivo com o módulo `dotenv`. \n",
-    "\n",
-    "Qualquer dúvida, ver *postagem anterior* (onde teria sido ensinado como usar o básico do Google Gemini)."
+    "Por esse motivo você vai precisar salvar com o nome GOOGLE_API_KEY em um arquivo `.env` e carregar este arquivo com o módulo `dotenv`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "GOOGLE_API_KEY = \"AIzaSyCVzF6VoGIBSIQdpaMb4vnwdlP8oEVu0g0\""
+    "from dotenv import load_dotenv, set_key, find_dotenv\n",
+    "import google.generativeai as gemini\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sua chave vai aqui para salva-la\n",
+    "GOOGLE_API_KEY = \"AIzaSyCVzF6VoGIBSIQdpaMb4vnwdlP8oEVu0g0\" "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def salva_chave(dotenv_path, chave): # Salva uma chave armazenada em GOOGLE_API_KEY\n",
+    "    set_key(dotenv_path, \"GOOGLE_API_KEY\", chave)\n",
+    "\n",
+    "    print(f\"Chave API salva em {dotenv_path}\")\n",
+    "\n",
+    "def carrega_chave(): # Carrega uma chave do arquivo .env\n",
+    "\n",
+    "    _ = load_dotenv(find_dotenv())\n",
+    "    chave = os.getenv(\"GOOGLE_API_KEY\")\n",
+    "\n",
+    "    print(f\"Chave API carregada com sucesso!\")\n",
+    "    return chave\n",
+    "\n",
+    "\n",
+    "def verifica_chave(): # Verifica a existência de um arquivo .env \n",
+    "    return find_dotenv()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Chave da API salva no arquivo .env.\n"
+      "Chave API carregada com sucesso!\n"
      ]
     }
    ],
    "source": [
-    "# save_api_key.py\n",
-    "from dotenv import load_dotenv, set_key, find_dotenv\n",
-    "import os\n",
+    "path = verifica_chave()\n",
     "\n",
-    "# Pergunta ao usuário a chave da API\n",
-    "api_key = \"AIzaSyCVzF6VoGIBSIQdpaMb4vnwdlP8oEVu0g0\"\n",
-    "\n",
-    "# Carrega (ou cria) o arquivo .env\n",
-    "dotenv_path = find_dotenv()\n",
-    "if not dotenv_path:\n",
-    "    with open('.env', 'w') as f:\n",
-    "        pass\n",
-    "    dotenv_path = find_dotenv()\n",
-    "\n",
-    "# Salva a chave da API no arquivo .env\n",
-    "set_key(dotenv_path, \"GOOGLE_API_KEY\", api_key)\n",
-    "\n",
-    "print(\"Chave da API salva no arquivo .env.\")\n"
+    "if not path:\n",
+    "    salva_chave(path, GOOGLE_API_KEY)\n",
+    "else:\n",
+    "    chave = carrega_chave()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 41,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from dotenv import load_dotenv, find_dotenv\n",
-    "import google.generativeai as genai\n",
-    "\n",
-    "_ = load_dotenv(find_dotenv())\n",
-    "# carrega a variável GOOGLE_API_KEY, que é importada automaticamente pelo módulo google.generativeai"
+    "Parabéns, agora sua chave já está carregada!"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 42,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import os\n",
-    "import google.generativeai as genai\n",
-    "\n",
-    "genai.configure(api_key=os.getenv('GOOGLE_API_KEY'))\n"
+    "### 3 - Utilizando o serviço"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 43,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "model = genai.GenerativeModel('gemini-1.5-flash')"
+    "Primeiramente devemos verificar quais são todos os modelos disponíveis para utilização.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +240,7 @@
    "source": [
     "import google.generativeai.client as client\n",
     "\n",
-    "# Listar modelos de forma segura\n",
+    "# Listar modelos \n",
     "models = client.get_default_model_client().list_models()\n",
     "\n",
     "for m in models:\n",
@@ -240,22 +249,76 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para o teste inicial utilizaremos o seguinte modelo 'gemini-1.5-flash' tendo em vista que o esse modelo é **Gratuito**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Carregando o modelo\n",
+    "model = gemini.GenerativeModel('gemini-1.5-flash')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nesse caso vou perguntar **\"Se você pudesse ter qualquer superpoder por um dia, qual seria e como você o usaria?\"**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Recebendo nossa primeira mensagem via código\n",
+    "resposta = model.generate_content(\"Se você pudesse ter qualquer superpoder por um dia, qual seria e como você o usaria?\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Algumas informações da resposta\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Boa noite! Como está sendo sua noite? \n",
+      "Se eu pudesse ter um superpoder por um dia, eu escolheria a capacidade de teletransportar. Imagino que seria incrível poder viajar para qualquer lugar do mundo em um piscar de olhos! \n",
+      "\n",
+      "Aqui estão algumas ideias de como eu usaria esse poder:\n",
+      "\n",
+      "* **Explorar o mundo:** Eu poderia visitar as maravilhas do mundo, como a Grande Muralha da China, a Estátua da Liberdade e as Pirâmides do Egito, tudo em um único dia.\n",
+      "* **Ajudar as pessoas:** Eu poderia teletransportar suprimentos para áreas atingidas por desastres naturais ou levar pessoas doentes para hospitais rapidamente.\n",
+      "* **Resolver crimes:** Eu poderia chegar ao local de um crime instantaneamente e coletar evidências ou até mesmo teletransportar um criminoso para a delegacia.\n",
+      "* **Experimentar coisas novas:** Eu poderia ir a um show em outro país, provar um prato exótico ou conhecer uma cultura diferente, tudo em um único dia.\n",
+      "\n",
+      "Claro, como um modelo de linguagem, não tenho desejos nem necessidades, então meu desejo de teletransportar é puramente hipotético. Mas imagino que seria uma experiência fantástica e cheia de possibilidades! \n",
+      "\n",
+      "prompt_token_count: 21\n",
+      "candidates_token_count: 246\n",
+      "total_token_count: 267\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "response = model.generate_content(\"Fale boa noite\")\n",
-    "print(response.text)"
+    "print(resposta.text) # Resposta textual\n",
+    "print(resposta.usage_metadata) # Informações como número de tokens usados"
    ]
   }
  ],
